Navbar Ui fix with CourseSection horizontal scrolling enhancment

--- a/app/globals.css
+++ b/app/globals.css
@@ -245,3 +245,11 @@
 .route-name {
   @apply whitespace-normal;
 }
+
+/* Hide scrollbar */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;}
